--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <nav>
@@ -14,6 +14,6 @@
         <p>Week 14</p>
     </nav>
     Enter number: <input tye="number" id="amongus" value="0">
-    <button>Affirm</button>
+    <button onclick="add()">Affirm</button>
 </body>
 </html>
