--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ITF Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <nav>
-        <p>68070044</p>
-        <h2>ITF Website</h2>
-        <p>Week 14</p>
+        <div class="left">68070044</div>
+        <div class="center">ITF Website</div>
+        <div class="right">Week 14</div>
     </nav>
-    Enter number: <input tye="number" id="amongus" value="0">
-    <button onclick="add()">Affirm</button>
+
+    <main>
+        <section class="Welcome-text">
+            <h1> Simple Bank</h1>
+            <p>I don't understand a single thing in class</p>
+            <textarea id="console" disabled></textarea>
+        </section>
+    </main>
 </body>
 </html>
