fixes the border

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
 
     <main>
         <section class="Welcome-text">
-            <h1> Simple Bank</h1>
-            <p>I don't understand a single thing in class</p>
-            <textarea id="console" disabled></textarea>
+            <div class="Welcome-wrapper">
+                <img src="images/niko.gif" alt="niko" class="bank-logo">
+                <div>
+                    <h1> Simple Bank</h1>
+                    <p>I don't understand a single thing in class</p>
+                </div>
+            </div>
+            <div class="console-container">
+                <div class="console-header">
+                    <span class="dot red"></span>
+                    <span class="dot yellow"></span>
+                    <span class="dot green"></span>
+                </div>
+                <textarea id="console" disabled></textarea>
+            </div>
         </section>
     </main>
 </body>
