finally webpage not yet working tho

--- a/index.html
+++ b/index.html
@@ -43,6 +43,43 @@
                         <p>Type: shit</p>
                     </div>
                 </div>
+                <div class="tabs">
+                    <img src="images/niko.gif" alt="niko" class="tabs-logo">
+                    <div>
+                        <h2>Balance Information</h2>
+                        <div class="field">
+                            <label for="account-balance">Current account balance:</label>
+                            <input type="number" id="account-balance" placeholder="1000">
+                        </div>
+                        <div class="field">
+                            <label for="cash-balance">Current account balance:</label>
+                            <input type="number" id="cash-balance" placeholder="1000">
+                        </div>
+                        <div class="field">
+                            <button id="change-btn">
+                                <span class="button_top"> change </span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="tabs">
+                    <img src="images/niko.gif" alt="niko" class="tabs-logo">
+                    <div>
+                        <h2>Bank Operation</h2>
+                        <div class="field">
+                            <select id="actions">
+                                <option value="deposite">Deposite</option>
+                                <option value="withdraw">withdraw</option>
+                            </select>
+                            <input type="number" id="actions-balance" placeholder="1">
+                        </div>
+                        <div class="field">
+                            <button id="actions-proceed">
+                                <span class="button_top"> Proceed</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="footers-section">
                 <h1>Financial Tools</h1>
