Finally done with this ;-;

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-<body style="background-color: rgba(7, 55, 127, 0.805)">
+<body style="background-color: rgb(0, 0, 0)">
     <nav>
         <div class="left">68070044</div>
         <div class="center">ITF Website</div>
@@ -37,7 +37,7 @@
                 <h1>Account Overiew</h1>
                 <div class="tabs">
                     <img src="images/niko.gif" alt="niko" class="tabs-logo">
-                    <div>
+                    <div class="lore">
                         <h2>Account Information</h2>
                         <p>Name: Jason Seer</p>
                         <p>Type: shit</p>
@@ -68,7 +68,7 @@
                         <h2>Bank Operation</h2>
                         <div class="field">
                             <select id="actions">
-                                <option value="deposite">Deposite</option>
+                                <option value="deposit">Deposit</option>
                                 <option value="withdraw">withdraw</option>
                             </select>
                             <input type="number" id="actions-balance" placeholder="1">
