forgot to change it to disable

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="field">
                             <label for="output-balance">Output balance:</label>
-                            <input type="number" id="output-balance" readonly placeholder="0">
+                            <input type="number" id="output-balance" disabled placeholder="0">
                         </div>
                         <div class="field">
                             <label for="input-currency">Input currency:</label>
